--- a/getting-started/first-test-experience/writing-your-first-test.mdx
+++ b/getting-started/first-test-experience/writing-your-first-test.mdx
@@ -1,174 +1,248 @@
 ---
-title: "Writing Your First Test Case"
-description: "Walks new users through setting up a simple test file: including the right headers, using core macros, and structuring a basic test function to validate their environment and understanding. Explains the anatomy of a standard test file."
+title: "Writing & Running Your First Test"
+description: "Shows you how to write a minimal test case, build it, and execute it, using real examples. Includes example code, expected output, and tips for interpreting test results."
 ---
 
-# Writing Your First Test Case
+# Writing & Running Your First Test
 
-Welcome to your very first step with GoogleTest! This guide walks you through creating a simple test file, including the necessary headers, using GoogleTest’s core macros, and structuring a test function that will validate your environment and help you understand the basic anatomy of a test case.
+Welcome to your first step in using GoogleTest and GoogleMock! In this guide, you'll learn how to write a minimal test case, build it, run it, and interpret its output. We'll walk through a complete example, showing you how to verify that your environment is set up correctly and your code is behaving as expected.
 
 ---
 
-## 1. Setting Up Your Test File
+## 1. Creating Your First Test Case
 
-Before writing tests, you need to create a test source file that includes GoogleTest’s headers and sets up the basic testing environment.
+The heart of GoogleTest is the `TEST` macro, which defines a single test.
 
-### Include the GoogleTest Header
-
-At the top of your test file, include the main GoogleTest header:
-
-```cpp
-#include <gtest/gtest.h>
-```
-
-This header brings in the core GoogleTest functionalities including assertions, test macros, and test runner support.
-
-### Use the `main` Function Provided by GoogleTest
-
-GoogleTest provides a default `main()` function, so you usually do not need to write your own `main()` unless you need special configuration. Linking with the `gtest_main` library will automatically provide this for you.
-
-If you want to write a custom main function for advanced control, you can do the following:
-
-```cpp
-int main(int argc, char **argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-This initializes GoogleTest and then runs all tests defined in your program.
-
-## 2. Writing Your First Test Function
-
-GoogleTest structures tests into **test cases** (sometimes called test suites) and **test functions** (test methods). 
-
-### Basic Syntax
-
-Use the `TEST` macro to define a test function:
-
-```cpp
-TEST(TestCaseName, TestName) {
-  // Arrange: Set-up any variables or objects.
-
-  // Act: Run the code to be tested.
-
-  // Assert: Check conditions using EXPECT_ or ASSERT_ macros.
-  EXPECT_EQ(1, 1);  // Example assertion
-}
-```
-
-- `TestCaseName` groups related tests together (usually a class or module name).
-- `TestName` identifies this particular test case.
-
-### Example: A Simple Test
-
-Here’s a complete example of a minimal test that always passes:
+### Minimal Example
 
 ```cpp
 #include <gtest/gtest.h>
 
-// A simple test case named "ExampleTest" with a test named "BasicAssertion".
+// A trivial test case.
 TEST(ExampleTest, BasicAssertion) {
-  int x = 5;
-  int y = 5;
-  EXPECT_EQ(x, y);  // Checks if x equals y.
+  EXPECT_EQ(1 + 1, 2);
 }
 ```
 
-### Typical Assertions
+- `ExampleTest` is the test suite name.
+- `BasicAssertion` is the name of this individual test.
 
-- `EXPECT_EQ(val1, val2)` — Verifies values are equal but continues test on failure.
-- `ASSERT_EQ(val1, val2)` — Verifies values are equal and aborts the test if it fails.
+This test simply checks that 1 + 1 equals 2, which should always pass.
 
-See the [GoogleTest Assertions Reference](https://google.github.io/googletest/reference/assertions.html) for all assertion types.
+### Compile the Test
 
-## 3. Running Your Test
+Ensure you include the GoogleTest headers and link to the GoogleTest and GoogleMock libraries when compiling. For example, using `g++`:
 
-Compile your test executable linking with GoogleTest libraries.
-
-From the command line:
-
-```shell
-./your_test_executable
+```bash
+g++ -std=c++11 -isystem /path/to/googletest/include -pthread \
+    your_test.cc /path/to/libgtest.a /path/to/libgmock.a -o your_test
 ```
 
-GoogleTest runs all tests it finds in your executable, prints the results to the console, and returns an appropriate status code.
+<Tip>
+Replace `/path/to/` with the actual paths on your system. Use your platform's build system for better management.
+</Tip>
 
-### Expected Output
+## 2. Running Your Test
 
-Example output for a passing test:
+Run the compiled executable:
 
+```bash
+./your_test
 ```
-[==========] Running 1 test from 1 test case.
+
+Expected output:
+
+```text
+[==========] Running 1 test from 1 test suite.
 [----------] Global test environment set-up.
 [----------] 1 test from ExampleTest
 [ RUN      ] ExampleTest.BasicAssertion
 [       OK ] ExampleTest.BasicAssertion (0 ms)
 [----------] 1 test from ExampleTest (0 ms total)
 
-[==========] 1 test from 1 test case ran. (0 ms total)
+[----------] Global test environment tear-down
+[==========] 1 test from 1 test suite ran. (0 ms total)
 [  PASSED  ] 1 test.
 ```
 
-If your test fails, GoogleTest will print detailed information about which assertion failed, including the source file and line number, actual values, and a snippet of your test code.
+### Understanding the Output
 
-## 4. Understanding the Anatomy of a Test
-
-- **Test suite (TestCaseName):** A group of related tests.
-- **Test (TestName):** A single function testing specific behavior.
-- **Setup and Teardown:**
-  - Use `TEST_F` macro with a test fixture class when you need common context or shared setup/cleanup for related tests.
-- **Assertions:** Validate expectations about the behavior.
-
-## 5. Best Practices
-
-- **Keep your tests small and focused.** Each test should verify one thing.
-- **Use meaningful names** for test cases and tests to describe their intent.
-- **Avoid side effects and dependencies** that could make tests flaky.
-
-## 6. Troubleshooting Common Pitfalls
+- `[ RUN      ]` indicates the test is running.
+- `[       OK ]` means the test passed.
+- `[  PASSED  ]` confirms all tests succeeded.
 
 <Tip>
-If your test executable does not run any tests, check:
-
-- Ensure your test function uses the `TEST` or `TEST_F` macro.
-- Verify your build links with the `gtest` and (optionally) `gtest_main` libraries.
-- If you wrote your own `main()`, confirm that you call `InitGoogleTest()` and `RUN_ALL_TESTS()`.
+If the test fails, GoogleTest will print informative error messages to help you diagnose the issue.
 </Tip>
+
+## 3. Adding Mock Objects (Optional but Recommended)
+
+GoogleMock extends GoogleTest by allowing you to create mock objects that can simulate and verify interactions.
+
+### Example Mock Class
+
+Define a mock for the following interface:
+
+```cpp
+class Turtle {
+ public:
+  virtual ~Turtle() {}
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+};
+```
+
+The mock:
+
+```cpp
+#include <gmock/gmock.h>
+
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+};
+```
+
+### Using the Mock in a Test
+
+```cpp
+TEST(PainterTest, CanDrawLine) {
+  MockTurtle turtle;
+
+  // Expect PenDown and Forward to be called with specific arguments.
+  EXPECT_CALL(turtle, PenDown());
+  EXPECT_CALL(turtle, Forward(100));
+
+  // Code under test would use the `turtle` mock.
+  turtle.PenDown();  // Simulate the code calling these.
+  turtle.Forward(100);
+}
+```
+
+### Run the Test
+
+When you build and run, the test will validate that the mock behaved as expected.
 
 <Tip>
-If your test fails unexpectedly, try running it with verbose output:
-
-```
-./your_test_executable --gtest_verbose=info
-```
-
-This prints detailed reasoning about which tests are run and why.
+You can suppress warnings about uninteresting calls by wrapping the mock in `NiceMock`: `NiceMock<MockTurtle> turtle;`.
 </Tip>
 
-## 7. What Next?
+## 4. Interpreting Test Results
 
-Once you have mastered this first test creation step, explore the following topics:
+### Successful Tests
 
-- [Building and Running Your Test Suite](/getting-started/first-test-experience/building-and-running-tests)
-- [Writing More Complex Tests with Fixtures](gmock_for_dummies.md)
-- [Using Assertions Effectively](/guides/core-workflows/using-assertions)
+- All tests passed: your environment and test logic are correct.
 
-These guides will help you expand your testing skills progressively.
+### Failure Cases
+
+- **Assertion Failures**: The output shows where and why tests failed.
+- **Mock Expectation Failures**: If `EXPECT_CALL` expectations are not met, GoogleMock reports errors immediately with detailed messages.
+
+### Increasing Verbosity for Debugging
+
+Run tests with the `--gmock_verbose=info` flag to see detailed trace of mock function calls and expectations.
+
+```bash
+./your_test --gmock_verbose=info
+```
+
+This helps diagnose why certain expectations are not met.
+
+## 5. Sample Complete Test File
+
+Here's a file you can compile and run to explore:
+
+```cpp
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
+
+using ::testing::NiceMock;
+using ::testing::StrictMock;
+using ::testing::NaggyMock;
+using ::testing::Expectation;
+
+// The interface.
+class Turtle {
+ public:
+  virtual ~Turtle() {}
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+};
+
+// Mock class.
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+};
+
+// Example test using a StrictMock.
+TEST(MockTurtleTest, StrictMockUsage) {
+  StrictMock<MockTurtle> turtle;
+
+  EXPECT_CALL(turtle, PenDown());
+  EXPECT_CALL(turtle, Forward(100));
+
+  turtle.PenDown();
+  turtle.Forward(100);
+}
+
+// Example test with NiceMock suppressing uninteresting call warnings.
+TEST(MockTurtleTest, NiceMockUninterestingCall) {
+  NiceMock<MockTurtle> turtle;
+
+  // No expectations set. Purely allows calls without warnings.
+  turtle.PenDown();  // No warning or failure
+  turtle.Forward(50);
+
+  // You can still set expectations.
+  EXPECT_CALL(turtle, Forward(50));
+  turtle.Forward(50);
+}
+
+// Very basic test without mocks.
+TEST(SimpleTest, Equals) {
+  EXPECT_EQ(1 + 1, 2);
+}
+
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  ::testing::InitGoogleMock(&argc, argv);
+  return RUN_ALL_TESTS();
+}
+```
+
+Build this with your GoogleTest and GoogleMock library paths, then run the executable.
+
+## 6. Tips for Success
+
+- Include the `<gtest/gtest.h>` header for GoogleTest and `<gmock/gmock.h>` for GoogleMock.
+- Compile and link against GoogleTest and GoogleMock libraries.
+- Use `EXPECT_CALL` to set expectations on mock methods.
+- Use `ON_CALL` to define default behavior when you do not want to expect a call.
+- You can wrap your mock objects in `NiceMock` or `StrictMock` to control behavior on uninteresting calls.
+- Run tests with `--gmock_verbose=info` to get detailed diagnostics.
+
+## 7. Common Pitfalls
+
+<AccordionGroup title="Common Issues When Writing and Running Your First Tests">
+<Accordion title="Linker Errors related to GoogleTest/GoogleMock">
+Ensure you have linked the GoogleTest and GoogleMock libraries correctly and use compatible compiler flags. Verify header include paths match library paths.
+</Accordion>
+<Accordion title="Test Fails but Output is Not Clear">
+Run with `--gmock_verbose=info` to see detailed function call traces and expectation matches.
+</Accordion>
+<Accordion title="Expectations Not Met Errors">
+Verify that all calls you `EXPECT_CALL` are actually made during the test run. Remember that order and cardinality matter unless explicitly set.
+</Accordion>
+<Accordion title="Uninteresting Call Warnings">
+Use `NiceMock` to suppress warnings about mock methods called without corresponding expectations.
+</Accordion>
+</AccordionGroup>
 
 ---
 
-## Summary
-
-This page introduced the essentials of writing your first test case with GoogleTest: including headers, defining tests with the `TEST` macro, and running tests. It explained test anatomy, common assertions, and practical tips to get started with confidence.
+For more examples and detailed recipes, see the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) and consult the [Mocking Reference](https://google.github.io/googletest/reference/mocking.html).
 
 ---
-
-### References
-- [GoogleTest Primer - Getting Started](https://google.github.io/googletest/primer.html)
-- [Assertions Reference](https://google.github.io/googletest/reference/assertions.html)
-- [gMock for Dummies](gmock_for_dummies.md) for mock testing
-
----
-
-> **Tip:** Remember, the cornerstone of successful testing is establishing clear expectations early, writing concise tests, and leveraging GoogleTest’s powerful macros to validate behavior effectively.
