--- a/getting-started/first-test-experience/quick-validation.mdx
+++ b/getting-started/first-test-experience/quick-validation.mdx
@@ -1,265 +1,207 @@
 ---
-title: "Quick Validation & Sanity Checks"
-description: "Provides a checklist and sample commands to verify successful installation and test execution. Helps users confirm correct environment setup and catch typical errors before they block further progress."
+title: "Validating Your Setup"
+description: "A checklist and troubleshooting guide to ensure your installation and first test ran correctly. Provides steps to check your environment, interpretation of common errors, and pointers to further help resources."
 ---
 
-# Quick Validation & Sanity Checks
+# Validating Your Setup
 
-GoogleTest installation and setup involve several components working seamlessly together. Before you dive into writing tests, it’s imperative to verify that your environment is correctly set up and GoogleTest works as expected. This page presents a checklist and practical commands to help you confirm a successful installation and catch common issues early, paving the way for smooth test development.
+This page provides a practical checklist and troubleshooting guide to ensure your GoogleTest installation and your first test run correctly. It helps you verify your environment, interpret common error messages, and points to additional resources for assistance.
 
 ---
 
-## 1. Confirm GoogleTest Installation
+## 1. Essential Environment Checks
 
-Verify that GoogleTest libraries and headers are correctly installed and accessible.
+Before you run your first test, confirm that your setup meets all the necessary conditions:
 
-### Check for Headers and Libraries
+- **Verify Compiler Compatibility**: Ensure your compiler version meets GoogleTest's requirements (see [Prerequisites & Supported Platforms](/getting-started/setup-requirements/prerequisites) for details).
+- **Confirm Build and Linkage**: Your project must properly link with `gtest` and `gmock` libraries. If using `gtest_main`, the default main() is provided.
+- **Check CMake or Bazel Integration**: Make sure your build files include GoogleTest as described in installation guides (e.g., [Installing on Linux/macOS](/getting-started/installation-guides/linux-macos-install) or [Using Bazel for Build & Test](/getting-started/installation-guides/bazel-integration)).
+- **Review Environment Variables**: Confirm no conflicting environment variables interfere with your test execution.
 
-- Locate `gtest` headers, typically in your include path:
+<Tip>
+Running your build and link commands with verbose flags (e.g., `VERBOSE=1` for CMake) helps reveal any linkage or dependency problems early.
+</Tip>
 
-  ```bash
-  find /usr/include /usr/local/include -name gtest.h
-  ```
+---
 
-- Verify compiled libraries are present, such as `libgtest.a` or `libgtest.so`:
+## 2. Running Your First Test
 
-  ```bash
-  find /usr/lib /usr/local/lib -name "libgtest*"
-  ```
+Once your environment is prepared, attempt running your test executable. Here's what to do:
 
-<div className="tip">
-If you followed standard installation using CMake, headers and libraries should be in `/usr/local/include/gtest/` and `/usr/local/lib/` or your custom prefix locations.
-</div>
-
-### Compiler and Linker Test
-
-Create a minimal test program to verify compilation and linking:
+<Steps>
+<Step title="Initialize and Run Tests">
+Invoke `RUN_ALL_TESTS()` in your `main()` function or link against `gtest_main` to automatically provide main().
 
 ```cpp
-#include <gtest/gtest.h>
-
-TEST(SanityCheck, BasicTest) {
-  EXPECT_EQ(1 + 1, 2);
-}
-
 int main(int argc, char** argv) {
   testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-Compile and link with GoogleTest libraries (adjust include and lib paths as needed):
+Ensure this function is called before running tests.
+</Step>
+<Step title="Execute the Test Binary">
+Run the compiled test binary from your command line or IDE.
 
-```bash
-# Example compilation command using g++
-g++ -std=c++17 -pthread sanity_check.cc -lgtest -lgtest_main -o sanity_check
-```
+Expected behavior:
 
-Run the compiled test:
+- Tests will run sequentially.
+- Output will indicate passed and failed tests.
+</Step>
+<Step title="Interpret Output">
+Look for:
 
-```bash
-./sanity_check
-```
+- `PASSED` messages indicating successful tests.
+- Failure messages highlighted with file and line numbers.
 
-Expected output should indicate one test run and passed, similar to:
+If the test binary fails to run, confirm your system path and dependencies.
+</Step>
+</Steps>
 
-```
-[==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 1 test from SanityCheck
-[ RUN      ] SanityCheck.BasicTest
-[       OK ] SanityCheck.BasicTest (0 ms)
-[----------] 1 test from SanityCheck ran. (0 ms total)
-[----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
-```
-
-If this passes, your basic install and linking are working correctly.
-
-<div className="callout check">
-Check: If compilation or linking fails, verify include paths, library linkage, and installed versions.
-</div>
+<Check>
+If your test does not run or crashes immediately, check for build or runtime errors as detailed in the troubleshooting section below.
+</Check>
 
 ---
 
-## 2. Validate GoogleMock Integration
+## 3. Common Errors and How to Diagnose Them
 
-If you use GoogleMock (the mocking framework), repeat analogous checks.
+This section outlines typical issues you may encounter during validation and solutions.
 
-### Try a Simple Mock Test
+### Build and Link Errors
 
-Build a simple mock class to confirm it's working:
+- **Undefined References**: Often caused by missing linkage to `gtest` or `gmock`.
+  - *Solution*: Confirm you link your test executable with `-lgtest -lgmock` (or relevant static libraries).
+- **Runtime Library Mismatch** (Windows): Occurs if CRT linkage differs between your code and GoogleTest.
+  - *Solution*: Build GoogleTest with the same runtime as your project (see platform-specific guides).
 
-```cpp
-#include <gmock/gmock.h>
+### Test Failures Immediately After Running
 
-class MockSimple {
- public:
-  MOCK_METHOD(int, Foo, (int x), ());
-};
+- **Failure: Tests Not Found or Skipped**
+  - *Cause*: Tests might not be registered properly.
+  - *Solution*: Ensure `TEST()` or `TEST_F()` macros are used and your test files are linked.
 
-TEST(MockSanityCheck, Works) {
-  MockSimple mock;
-  EXPECT_CALL(mock, Foo(42)).WillOnce(::testing::Return(100));
-  EXPECT_EQ(mock.Foo(42), 100);
-}
+- **Uninteresting Mock Function Call Warnings**
+  - *Cause*: A mock method was called without any expectations set.
+  - *Solution*: Set expectations using `EXPECT_CALL()` or use `NiceMock` to suppress warnings.
+  - Use `--gmock_verbose=info` to trace mock calls for insight.
 
-int main(int argc, char** argv) {
-  ::testing::InitGoogleMock(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
+### Unexpected Test Behavior
 
-Compile with:
+- **Tests Always Passing or Failing Unexpectedly**
+  - *Cause*: Missing `RUN_ALL_TESTS()` call or improper initialization.
+  - *Solution*: Verify your `main()` calls `testing::InitGoogleTest()` and `RUN_ALL_TESTS()` exactly once.
 
-```bash
-g++ -std=c++17 -pthread mock_sanity_check.cc -lgmock -lgtest -lgtest_main -o mock_sanity_check
-```
-
-Run and expect test to pass.
-
-<div className="callout check">
-Check: Ensure that `-lgmock` and `-lgtest` link order is correct and that headers are located properly.
-</div>
+- **Crash in Destruction of Mock Objects**
+  - *Cause*: Base classes lack virtual destructors.
+  - *Solution*: Add a virtual destructor to all base classes used by mocks.
 
 ---
 
-## 3. Common Flags Verification
+## 4. Tips for Effective Validation
 
-GoogleTest offers several runtime flags to control test execution and reporting.
+- **Use Verbose Output**
+  Run your test executable with:
 
-- Verify that `--help` displays GoogleTest flags:
-
-  ```bash
-  ./your_test_binary --help
+  ```shell
+  ./your_test_binary --gmock_verbose=info --gtest_repeat=1
   ```
 
-- Confirm environment variables like `GTEST_FILTER` operate correctly:
+  This logs detailed mock call information and test execution flow.
 
-  ```bash
-  GTEST_FILTER=SanityCheck.* ./sanity_check
-  ```
+- **Verify Default Actions for Mock Methods**
+  If a mock method returns a value but you have not specified a return action, GoogleTest provides a default. Confirm this matches your test's needs or set explicit `ON_CALL` or `EXPECT_CALL` actions.
 
-- Try `--gtest_list_tests` to see test discovery:
+- **Check Call Ordering if Sequence Matters**
+  Use `InSequence` or `After` clauses to enforce call order in mocks and ensure your setup respects these constraints.
 
-  ```bash
-  ./sanity_check --gtest_list_tests
-  ```
-
-<div className="callout tip">
-Tip: Flags can be combined for selective test runs and diagnostics.
-</div>
+- **Run Tests One by One**
+  Use `--gtest_filter=TestSuiteName.TestName` to isolate and debug specific tests.
 
 ---
 
-## 4. Verify Run-Time Logging & Output
+## 5. Where to Go From Here
 
-Confirm GoogleTest produces clean, color-coded output (if terminal supports it) and outputs XML or JSON if requested.
-
-- Run test with color enabled:
-
-  ```bash
-  ./sanity_check --gtest_color=yes
-  ```
-
-- Generate XML report:
-
-  ```bash
-  ./sanity_check --gtest_output=xml:report.xml
-  ```
-
-- Generate JSON report:
-
-  ```bash
-  ./sanity_check --gtest_output=json:report.json
-  ```
-
-Verify report files are created and parsable.
-
-<div className="callout check">
-Check: If output is not as expected, verify terminal support, file permissions, and path correctness.
-</div>
+- For detailed installation problems, consult [Installation Overview](/getting-started/setup-requirements/installation-overview) and platform-specific guides.
+- To learn how to write and run tests, including setting up project files, see [Writing & Running Your First Test](/getting-started/first-test-experience/writing-your-first-test) and [Project Setup & Configuration](/getting-started/first-test-experience/project-setup).
+- For understanding and using mocks effectively, see the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) and [Mocking Reference](/api-reference/mocking-apis/mock-class-definition).
+- If you face specific issues, explore the [Troubleshooting & Best Practices FAQ](/faq/troubleshooting-and-best-practices/build-and-link-errors).
+- Get help from the community or report issues at the [Support & Community Resources](/faq/support-and-community/where-to-get-help).
 
 ---
 
-## 5. Troubleshooting Common Pitfalls
+## 6. Troubleshooting Quick Reference
 
-- **Linking Errors:** Double-check library paths, link order (`-lgmock -lgtest`) and compiler flags.
-- **Missing Symbols:** Confirm spelling and usage of `InitGoogleTest()`, `RUN_ALL_TESTS()`, and `InitGoogleMock()`.
-- **Header Not Found:** Verify include paths and installed headers.
-- **Multi-threading Issues on Windows:** Ensure you are not using threads for assertions in unsupported environments.
+<AccordionGroup title="Common Issues">
+<Accordion title="Build fails with undefined references to gtest or gmock">
+Verify your linker flags include `-lgtest -lgmock` or equivalent static libs.
+Check your CMake or Bazel build files for correct GoogleTest target dependencies.
+</Accordion>
 
-<div className="tip">
-Refer to the [Troubleshooting Common Setup Issues](/getting-started/first-test-experience/troubleshooting-common-issues) for detailed steps.
-</div>
+<Accordion title="Test executable runs but no tests execute">
+Ensure all test files are linked and contain valid `TEST()` / `TEST_F()`.
+Confirm `RUN_ALL_TESTS()` runs in your `main()`.
+</Accordion>
+
+<Accordion title="Warnings about uninteresting mock calls">
+Set expectations on the called mock methods using `EXPECT_CALL()`.
+Suppress warnings using `NiceMock` when appropriate.
+Use `--gmock_verbose=info` to understand mock call patterns.
+</Accordion>
+
+<Accordion title="GoogleMock complains about missing virtual destructors">
+Add virtual destructors to all polymorphic base classes you intend to mock.
+Ensure destructors are `virtual` to prevent memory leaks and undefined behavior.
+</Accordion>
+
+<Accordion title="Tests fail or crash unexpectedly">
+Run with `--gtest_repeat=1` and `--gmock_verbose=info` to get detailed tracing.
+Check your test setup for exception safety and memory issues.
+</Accordion>
+</AccordionGroup>
+
+<Note>
+Problems not resolved here can often be solved by ensuring your system matches prerequisites and reviewing build configurations. Always consult platform-specific guides for details.
+</Note>
 
 ---
 
-## 6. Quick Sanity Test Script
+## 7. Additional Resources
 
-If you want to quickly validate the GoogleTest installation within a shell script, here is a simple snippet:
+- [GoogleTest Primer](docs/primer.md) — Learn the basics of writing tests
+- [GoogleMock for Dummies](googlemock/README.md) — Understand mocking concepts and usage
+- [Mocking Reference](docs/reference/mocking.md) — Comprehensive mock API
+- [GoogleTest Troubleshooting FAQ](/faq/troubleshooting-and-best-practices/build-and-link-errors)
+- [Community Support](https://github.com/google/googletest/issues) — Report issues or get help
 
-```bash
-#!/bin/bash
+---
 
-set -e
+## Summary Diagram
 
-echo "Compiling sanity check test..."
-
-cat <<EOF > sanity_check.cc
-#include <gtest/gtest.h>
-
-TEST(SanityCheck, BasicTest) {
-    EXPECT_EQ(1 + 1, 2);
-}
-
-int main(int argc, char** argv) {
-    testing::InitGoogleTest(&argc, argv);
-    return RUN_ALL_TESTS();
-}
-EOF
-
-# Adjust flags below based on your local paths
-
-g++ -std=c++17 -pthread sanity_check.cc -lgtest -lgtest_main -o sanity_check
-
-./sanity_check || {
-    echo "Sanity check failed! Please check your installation and compilation flags."
-    exit 1
-}
-
-echo "Sanity check succeeded! GoogleTest installation looks good."
-```
-
-Run this script after making it executable:
-
-```bash
-chmod +x sanity_check_test.sh
-./sanity_check_test.sh
+```mermaid
+flowchart TD
+  A[Start Test Setup] --> B[Check Compiler & Build Tools]
+  B --> C{Is environment ready?}
+  C -->|No| D[Fix Environment Issues]
+  D --> B
+  C -->|Yes| E[Build/Link GoogleTest & Mocks]
+  E --> F{Build Success?}
+  F -->|No| G[Review build/link errors]
+  G --> E
+  F -->|Yes| H[Write Your First Test or Use Sample]
+  H --> I[Run Test Executable]
+  I --> J{Did tests run?}
+  J -->|No| K[Verify test discovery & RUN_ALL_TESTS()]
+  K --> I
+  J -->|Yes| L{Failures or Warnings?}
+  L -->|Yes| M[Review error messages and fix]
+  M --> H
+  L -->|No| N[Setup Validated - Proceed]
 ```
 
 ---
 
-## Summary
-
-These quick validation steps ensure that your GoogleTest and GoogleMock setup is working correctly before you build real tests. A successful sanity check provides confidence and prevents common configuration pitfalls.
-
-For detailed test writing, configuration, and troubleshooting guidance, refer to these related resources:
-
-- [GoogleTest Primer](primer.md)
-- [Installation on Standard Platforms](/getting-started/setup-installation/installing-standard-platforms)
-- [Troubleshooting Common Setup Issues](/getting-started/first-test-experience/troubleshooting-common-issues)
-- [GoogleMock Basics](gmock_for_dummies.md)
-
----
-
-## Additional Resources
-- [GoogleTest Flags Reference](advanced.md#running-test-programs-advanced-options)
-- [Assertions Reference](reference/assertions.md)
-- [Mocking Reference](reference/mocking.md)
-- [gMock Cookbook](gmock_cook_book.md)
-
----
-
-With your environment validated, you’re now ready to write robust and maintainable tests using GoogleTest and GoogleMock. Happy testing!
+<Tip>
+Use the above flow to systematically verify and fix your setup before progressing to writing extensive tests.
+</Tip>
